# CloneAcademy

./: .gitignore  README.md  pyproject.toml
cloneacademy/: __init__.py  analyzer.py  app.py
cloneacademy/templates/: documentation_prompt.jinja2
docs/samples/: analysis_output.md  sample_documentation.md  save_screenshots.py  ui_screenshot.md
output/: pybitcask_documentation.md
